# Multi-Agent-researcher

./: .env.example  .gitignore  README.md  app.py  justfile  pyproject.toml
docs/: architecture.md  design_decisions.md  mcp.md  observability.md
evals/: __init__.py  golden_set.jsonl  run_eval.py
src/research_assistant/: cli.py  config.py  errors.py  graph.py  mcp_client.py  messages.py  observability.py
src/research_assistant/agents/: __init__.py  base.py  critic.py  planner.py  researcher.py  writer.py
src/research_assistant/mcp_servers/: __init__.py  filesystem.py  web_search.py
src/research_assistant/prompts/: __init__.py  critic.md  planner.md  researcher.md  writer.md
tests/: fakes.py  test_agents.py  test_eval.py  test_graph.py  test_mcp_client.py  test_messages.py  test_observability.py
